1999-01-13  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.[hm] ([Collection_any hdf5Out:deep:]): New method.

	* Collection.m ([Colleciton_any hdf5Out:deep:]): Call
	numberRecord: on dataset.

1999-01-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Collection.[hm], collections.h ([Collection_any -allSameClass]):
	New method.

1999-01-12  Vladimir Jojic  <vjojic@wijiji.santafe.edu>

	* collections.h (PermutedIndex):  Declare -reshuffle.

	* Permutation.[hm] ([PermutationItem_c -describe:]): New method

	* Collection.[hm] ([PermutedIndex -reshuffle]): New method.

1999-01-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* List.[hm] ([List_any -lispOut:deep:]): Renamed from lispOut:; added
	deep serialization boolean option.

	* Map.[hm]: Likewise.

1999-01-09  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* InputStream.m ([InputStream_c -getExpr]): Handle nil and Nil
	as an ArchiverValue.
	([ArchiverArray_c -setArray:]): Handle arrays of type id.

	* InputStream.[hm], defobj.h ([ArchiverValue_c -setNil],
	([ArchiverValue_c -getObject]): New methods.

	* InputStream.[hm] (ArchiverValue_c): Rename number to value.

1999-01-08  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* List.m ([List_any -lispOut:]): Use MAKE_INSTANCE_FUNCTION_NAME
	instead of MAKE_OBJC_FUNCTION_NAME.

	* Map.m ([Map_c -lispOut:]): Likewise.

1999-01-06  Alex Lancaster  <alex@santafe.edu>

	* collections.h (PermutationItem): Add phase tags and
	documentation strings.

1999-01-06  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* List_GEN.m ([TINDEX -setOffset:]): Cast count to int.

	* collections.h (PermutationItem): New protocol.
	(PermutedIndex): Remove no-update qualification.

	* collections.m (_collections_implement): Setup PermutationItem.

	* Collection.m: Include Permutation.h and collections.h.
	([PermutedIndex_c -next], [PermutedIndex_c -prev]): Use
	PermutationItem to get item.  Skip over removed items.
	([PermutedIndex_c -findNext:], [PermutedIndex_c -findPrev:],