@@ -10,7 +10,7 @@ Library:      collections
 */
 
 #import <collections/Collection.h>
-
+#include <swarmconfig.h> // HAVE_HDF5
 //
 // struct mapentry, mapentry_t -- internal node containing key-member pair
 //
@@ -42,8 +42,12 @@ typedef struct mapentry {
 - _createPermutedIndex_: aZone forIndexSubclass: anIndexSubclass;
 - createIndex: aZone fromMember: anObject;
 - (void)mapAllocations: (mapalloc_t)mapalloc;
+- (BOOL)allSameClass;
 - lispIn: expr;
 - lispOut: stream deep: (BOOL)deepFlag;
+#ifdef HAVE_HDF5
+- hdf5Out: hdf5Obj deep: (BOOL)deepFlag;
+#endif
 @end
 
 @interface MapIndex_c: Index_any <MapIndex>
